--- a/coupon/src/main/resources/bootstrap.properties
+++ b/coupon/src/main/resources/bootstrap.properties
@@ -1,2 +1,16 @@
 spring.application.name=coupon
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+#\u547D\u540D\u7A7A\u95F4
+spring.cloud.nacos.config.namespace=807c763d-159c-4c2e-8ec5-1430517bcb57
+#\u914D\u7F6E\u6587\u4EF6
+spring.cloud.nacos.config.extension-configs[0].data-id=datasource.yml
+spring.cloud.nacos.config.extension-configs[0].group=dev
+spring.cloud.nacos.config.extension-configs[0].refresh=true
+
+spring.cloud.nacos.config.extension-configs[1].data-id=Mybatis.yml
+spring.cloud.nacos.config.extension-configs[1].group=dev
+spring.cloud.nacos.config.extension-configs[1].refresh=true
+
+spring.cloud.nacos.config.extension-configs[2].data-id=other.yml
+spring.cloud.nacos.config.extension-configs[2].group=dev
+spring.cloud.nacos.config.extension-configs[2].refresh=true
