--- a/renren-fast/pom.xml
+++ b/renren-fast/pom.xml
@@ -9,9 +9,9 @@
 	<description>renren-fast</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.4.RELEASE</version>
+		<groupId>com.example</groupId>
+		<artifactId>gu</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
 	<properties>
