--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -20,12 +20,19 @@ spring:
             - Path=/api/product/**
           filters:
             - RewritePath=/api/?(?<segment>.*),/$\{segment}
+        - id: third
+          uri: lb://third
+          predicates:
+            - Path=/api/third/**
+          filters:
+            - RewritePath=/api/?(?<segment>.*),/$\{segment}
         - id: admin_route
           uri: lb://renren-fast
           predicates:
             - Path=/api/**
           filters:
             - RewritePath=/api/?(?<segment>.*),/renren-fast/$\{segment}
+
 
 
   application:
