--- a/third/src/main/resources/application.yml
+++ b/third/src/main/resources/application.yml
@@ -10,4 +10,9 @@ spring:
 server:
   port: 13000
 
-
+alibaba:
+  cloud:
+    access-key: LTAI5tHRWqMKb6ZPhds8hNBv
+    secret-key: gUsOhCHLthZ373mbRNzZI6B9jjzNqv
+    oss:
+      endpoint: oss-cn-hangzhou.aliyuncs.com
