--- a/common/pom.xml
+++ b/common/pom.xml
@@ -18,6 +18,10 @@
     </properties>
     <dependencies>
 
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
