--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -15,6 +15,7 @@
 	<description>gateway</description>
 	<properties>
 		<java.version>11</java.version>
+		<knife4j.version>3.0.3</knife4j.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -26,6 +27,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.xiaoymin</groupId>
+			<artifactId>knife4j-spring-boot-starter</artifactId>
+			<version>${knife4j.version}</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
