--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -14,12 +14,20 @@ spring:
           uri: https://www.qq.com
           predicates:
           - Query=url,qq
+        - id: product_route_knife4j
+          uri: lb://product
+          predicates:
+            - Path=/product/**
+          filters:
+            - SwaggerHeaderFilter
+            - StripPrefix=1
         - id: product_route
           uri: lb://product
           predicates:
             - Path=/api/product/**
           filters:
             - RewritePath=/api/?(?<segment>.*),/$\{segment}
+
         - id: third
           uri: lb://third
           predicates:
@@ -32,6 +40,7 @@ spring:
             - Path=/api/**
           filters:
             - RewritePath=/api/?(?<segment>.*),/renren-fast/$\{segment}
+
 
 
 
