完善商品添加，实现商品检索，属性检索

--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
         service: product
   application:
     name: product
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
