采购需求，以及将需求合并至采购单

--- a/ware/src/main/resources/application.yml
+++ b/ware/src/main/resources/application.yml
@@ -7,10 +7,12 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1
+        server-addr: 127.0.0.1:8848
         service: ware
   application:
     name: ware
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
