--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -6,14 +6,14 @@ spring:
         service: gateway
     gateway:
       routes:
-        - id: test_route
-          uri: https://www.baidu.com
-          predicates:
-          - Query=url,baidu
-        - id: qq_route
-          uri: https://www.qq.com
-          predicates:
-          - Query=url,qq
+       # - id: test_route
+        #  uri: https://www.baidu.com
+         # predicates:
+         # - Query=url,baidu
+        #- id: qq_route
+        #  uri: https://www.qq.com
+        #  predicates:
+        #  - Query=url,qq
         - id: product_route_knife4j
           uri: lb://product
           predicates:
@@ -31,6 +31,13 @@ spring:
           uri: lb://member
           predicates:
             - Path=/api/member/**
+          filters:
+            - RewritePath=/api/?(?<segment>.*),/$\{segment}
+
+        - id: ware_route
+          uri: lb://ware
+          predicates:
+            - Path=/api/ware/**
           filters:
             - RewritePath=/api/?(?<segment>.*),/$\{segment}
         - id: third
