--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <spring-cloud.version>2020.0.1</spring-cloud.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <elasticsearch.version>7.15.1</elasticsearch.version>
     </properties>
     <dependencies>
         <dependency>
