--- a/product/pom.xml
+++ b/product/pom.xml
@@ -91,6 +91,10 @@
             <artifactId>redisson</artifactId>
             <version>3.16.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
 
     </dependencies>
 
