--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -18,6 +18,10 @@ spring:
   redis:
     host: localhost
     port: 6379
+  cache:
+    type: redis
+    redis:
+      time-to-live: 300000
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
