添加搜索页面，与主页联调

--- a/elasticSearch/src/main/resources/application.yml
+++ b/elasticSearch/src/main/resources/application.yml
@@ -6,5 +6,7 @@ spring:
         service: elasticSearch
   application:
     name: elasticSearch
+  thymeleaf:
+    cache: false
 server:
   port: 15000
