--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -55,7 +55,11 @@ spring:
         - id: gumall_host_router
           uri: lb://product
           predicates:
-            - Host=**.happymall.mall
+            - Host=happymall.mall
+        - id: gumall_search_router
+          uri: lb://elasticSearch
+          predicates:
+            - Host=search.happymall.mall
 
 
 
