商品详情异步编排，认证环境搭建

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -60,6 +60,10 @@ spring:
           uri: lb://elasticSearch
           predicates:
             - Host=search.happymall.mall
+        - id: gumall_authServer_router
+          uri: lb://authServer
+          predicates:
+            - Host=auth.happymall.mall
 
 
 
