--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -36,3 +36,8 @@ server:
 logging:
   level:
     com.product: error
+mall:
+  thread:
+    core-size: 20
+    max-size: 200
+    keep-alive-time: 10
