--- a/authServer/src/main/resources/application.yml
+++ b/authServer/src/main/resources/application.yml
@@ -11,5 +11,10 @@ spring:
   redis:
     host: localhost
     port: 6379
+  session:
+    store-type: redis
 server:
   port: 16000
+  servlet:
+    session:
+      timeout: 30m
