--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -23,6 +23,8 @@ spring:
     redis:
       time-to-live: 300000
       cache-null-values: true
+  session:
+    store-type: redis
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
