--- a/elasticSearch/pom.xml
+++ b/elasticSearch/pom.xml
@@ -59,6 +59,10 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
 
     </dependencies>
     <repositories>
