--- a/cart/pom.xml
+++ b/cart/pom.xml
@@ -54,6 +54,10 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
     </dependencies>
     <!--<dependencyManagement>
         <dependencies>
