--- a/cart/src/main/resources/application.yml
+++ b/cart/src/main/resources/application.yml
@@ -15,3 +15,8 @@ spring:
     store-type: redis
 server:
   port: 17000
+mall:
+  thread:
+    keep-alive-time: 10
+    max-size: 200
+    core-size: 20
