--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -33,6 +33,10 @@
 			<artifactId>knife4j-spring-boot-starter</artifactId>
 			<version>${knife4j.version}</version>
 		</dependency>
+		<!--<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>-->
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
