--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -33,6 +33,9 @@ spring:
   redis:
     port: 6379
     host: localhost
+  mvc:
+    format:
+      date: yyyy-MM-dd HH:mm:ss
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
