秒杀接口完成，展示完成

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -82,7 +82,10 @@ spring:
           uri: lb://member
           predicates:
             - Host=member.happymall.mall
-
+        - id: gumall_seckill_router
+          uri: lb://seckill
+          predicates:
+            - Host=seckill.happymall.mall
 
   application:
     name: gateway
