--- a/seckill/pom.xml
+++ b/seckill/pom.xml
@@ -57,6 +57,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
     </dependencies>
     <!--<dependencyManagement>
         <dependencies>
