--- a/authServer/src/main/resources/bootstrap.properties
+++ b/authServer/src/main/resources/bootstrap.properties
@@ -5,3 +5,5 @@ spring.cloud.nacos.config.namespace=1703d5aa-1dec-49db-adec-889cb31fde87
 spring.cloud.nacos.config.extension-configs[0].data-id=oauth2.yml
 spring.cloud.nacos.config.extension-configs[0].group=DEFAULT_GROUP
 spring.cloud.nacos.config.extension-configs[0].refresh=true
+
+management.endpoints.web.exposure.include=*
