--- a/authServer/src/main/resources/application.yml
+++ b/authServer/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
       discovery:
         server-addr: 127.0.0.1:8848
         service: authServer
+    sentinel:
+      transport:
+        dashboard: localhost:8333
   application:
     name: authServer
   thymeleaf:
@@ -18,3 +21,4 @@ server:
   servlet:
     session:
       timeout: 30m
+
