--- a/cart/src/main/resources/application.yml
+++ b/cart/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
       discovery:
         server-addr: 127.0.0.1:8848
         service: cart
+    sentinel:
+      transport:
+        dashboard: localhost:8333
   application:
     name: cart
   thymeleaf:
@@ -20,3 +23,4 @@ mall:
     keep-alive-time: 10
     max-size: 200
     core-size: 20
+
