--- a/elasticSearch/src/main/resources/application.yml
+++ b/elasticSearch/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
       discovery:
         server-addr: 127.0.0.1:8848
         service: elasticSearch
+    sentinel:
+      transport:
+        dashboard: localhost:8333
   application:
     name: elasticSearch
   thymeleaf:
