--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
     alibaba:
       seata:
         tx-service-group: happy_order_group
+    sentinel:
+      transport:
+        dashboard: localhost:8333
   datasource:
     username: root
     password: 123456
