--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,13 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <!-- sentinel -->
+        <!-- https://mvnrepository.com/artifact/com.alibaba.cloud/spring-cloud-starter-alibaba-sentinel -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+
         <!--OSS-->
     </dependencies>
     <dependencyManagement>
