--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
     alibaba:
       seata:
         tx-service-group: happy_product_group
+    sentinel:
+      transport:
+        dashboard: localhost:8333
   application:
     name: product
   jackson:
@@ -37,7 +40,7 @@ mybatis-plus:
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
 server:
-  port: 7100
+  port: 7200
 logging:
   level:
     com.product: error
