--- a/product/src/main/resources/bootstrap.properties
+++ b/product/src/main/resources/bootstrap.properties
@@ -1,3 +1,4 @@
 spring.application.name=product
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=9e0e350e-b135-4ca6-973b-1dce9f684fa9
+management.endpoints.web.exposure.include=*
