--- a/seckill/src/main/resources/application.yml
+++ b/seckill/src/main/resources/application.yml
@@ -6,6 +6,10 @@ spring:
       discovery:
         server-addr: 127.0.0.1:8848
         service: seckill
+    sentinel:
+      transport:
+        port: 8719
+        dashboard: localhost:8333
   redis:
     host: localhost
     port: 6379
@@ -24,3 +28,4 @@ spring:
     cache: false
 server:
   port: 18000
+
