--- a/third/src/main/resources/application.yml
+++ b/third/src/main/resources/application.yml
@@ -4,10 +4,12 @@ spring:
       discovery:
         server-addr: 127.0.0.1:8848
         service: third
+    sentinel:
+      transport:
+        dashboard: localhost:8333
   application:
     name: third
 
 server:
   port: 13000
-
 
